--- a/GradeBookManager/GradeBookManager.csproj
+++ b/GradeBookManager/GradeBookManager.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="ClassroomArchive.cs" />
+    <Compile Remove="StudentArchive.cs" />
+  </ItemGroup>
+
 </Project>
