removed menu.cs, editing static stuff

--- a/GradeBookManager/GradeBookManager.csproj
+++ b/GradeBookManager/GradeBookManager.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Compile Remove="ClassroomArchive.cs" />
+    <Compile Remove="Menu.cs" />
     <Compile Remove="StudentArchive.cs" />
   </ItemGroup>
 
